# sert_lending

./: .env.example  .env.test  .gitignore  Makefile  README.md  TESTING.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py  startup.py
backend/app/routers/: admin.py  public.py  webhooks.py
backend/app/services/: audit.py  certificate_delivery.py  certificates.py  email.py  orders.py  payments.py  pdf.py  yookassa_security.py
backend/tests/: test_download.py  test_fulfill.py  test_reserve.py
docs/: csv-format.md  integration-tilda.md  payment-setup.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/payment/fail/: page.tsx
frontend/app/payment/mock/: page.tsx
frontend/app/payment/success/: page.tsx
frontend/components/: CertificateForm.tsx  IframeResize.tsx  TestModeBanner.tsx
frontend/lib/: api.ts
infra/caddy/: Caddyfile  Caddyfile.example
samples/: certificates.sample.csv
scripts/: dev.sh  package-for-test.sh  start-test.sh
